Fixed defect 66 - Login screen goes off screen with monitor with 1280x1024 resolution

--- a/Tinville/static/css/main.css
+++ b/Tinville/static/css/main.css
@@ -214,8 +214,9 @@ body {
 
 #signInModal {
     width: 1200px;
-    top: 20%;
-    left: 33%
+    position: fixed;
+    top: 50%;
+    left: 50%;
 }
 
 #message_area {
